--- a/temp.css
+++ b/temp.css
@@ -11,7 +11,7 @@
 /* Optional: embed custom fonts here with `@import`          */
 /* This must remain at the top of this file.                 */
 
- @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab&family=Roboto:wght@300&display=swap');
+
 
 html {
   /*-- Main font sizes --*/
@@ -27,10 +27,10 @@ html {
   --aside-color:     rgba(0, 0, 0, 0.6);
   --fig-cap-color:   rgba(0, 0, 0, 0.6);
   /*-- Specify custom fonts ~~~ must be imported above   --*/
-  --heading-font:    "Roboto Slab";
+  --heading-font:    sans-serif;
   --mono-font:       monospace;
   --body-font:       sans-serif;
-  --navbar-font:     'Roboto', sans-serif;  /* websites + blogs only */
+  --navbar-font:     sans-serif;  /* websites + blogs only */
 }
 
 /*-- ARTICLE METADATA --*/
@@ -60,17 +60,17 @@ d-appendix {
 
 .distill-site-header {
   --title-size:       18px;
-  --text-color:       #C4E4FD;/*--rgba(255, 255, 255, 0.8);--*/
+  --text-color:       rgba(255, 255, 255, 0.8);
   --text-size:        15px;
   --hover-color:      white;
-  --bkgd-color:       #04395E;
+  --bkgd-color:       #0F2E3D;
 }
 
 .distill-site-footer {
-  --text-color:       #C4E4FD;/*--rgba(255, 255, 255, 0.8);--*/
+  --text-color:       rgba(255, 255, 255, 0.8);
   --text-size:        15px;
   --hover-color:      white;
-  --bkgd-color:       #04395E;
+  --bkgd-color:       #0F2E3D;
 }
 
 /*-- Additional custom styles --*/
